Fixed overflow stylings

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -5,7 +5,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  overflow-x: scroll;
+  overflow: scroll;
 }
 
 div, section {
